Corregido errores de compilacion y makefile

--- a/Prácticas/Práctica 3/Pila_Max/makefile
+++ b/Prácticas/Práctica 3/Pila_Max/makefile
@@ -1,16 +1,13 @@
-bin/main: obj/main.o obj/pila.o
-	g++ obj/main.o obj/pila.o -o bin/main
+bin/main: obj/main.o include/Pila_max.h include/Pila_max_VD.h include/Pila_max_Cola.h
+	g++ obj/main.o -Iinclude/ -o bin/main
 
 obj/main.o: src/main.cpp
 	g++ -g -c -I./include src/main.cpp -o obj/main.o
-
-obj/pila.o: src/Pila_max_VD.cpp include/Pila_max_CD.h
-	g++ -g -c -I./include src/Pila_max_VD.cpp -o obj/pila.o
 
 clean:
 	rm obj/* bin/*
 
 rebuild: clean bin/main
 
-documentacion:
+documentacion: 
 	doxygen Doxyfile
