:book: Guia telefonos acabada

--- a/Prácticas/Práctica 4/guia/makefile
+++ b/Prácticas/Práctica 4/guia/makefile
@@ -1,8 +1,12 @@
-bin/main: obj/main.o include/guia.h
-	g++ obj/main.o -Iinclude/ -o bin/main 
+bin/main: obj/main.o obj/guia.o
+	g++ obj/main.o obj/guia.o -Iinclude/ -o bin/main 
 
 obj/main.o: src/main.cpp
 	g++ -g -c -I./include src/main.cpp -o obj/main.o
+
+
+obj/guia.o: src/guia.cpp include/guia.h
+	g++ -g -c -I./include src/guia.cpp -o obj/guia.o
 
 clean:
 	rm obj/* bin/*
